# paper-doll-studio

./: .gitignore  LICENSE  README.md  app.js  character.psd  clothed.psd  doll_config.js  doll_config.js.bak  export_body_ref.py  extract_assets.py  index.html  ingest_assets.py  naked.psd  package-lock.json  package.json  plan.md  project-schema.json  project.json  project.json.bak  project.md  prompt_guide.md  psd_to_prototype.py  pyproject.toml  requirements.txt  server.py  style.css
base_rig/: rig.json
compiler/: __init__.py  ai_segmenter.py  align_asset.py  anime_detector.py  anime_segmenter.py  body_parser.py  build_base_rig.py  canonical_schema.py  category_registry.py  cleanup_assist.py  compiler.py  coreml_bridge.py  danbooru_mapper.py  depth_estimator.py  dwpose_estimator.py  fit_pipeline.py  fit_validation.py  garment_anchors.py  garment_schema.py  guide_templates.py  inpaint_bridge.py  layerdiffuse_bridge.py  normalize_canvas.py  pattern_constructor.py  pose_estimator.py  reference_pack.py  rig_autodetect.py  semantic_layer.py  split_slots.py  stencil_pipeline.py  style_schema.py  validate_asset.py  visual_classifier.py  warp_fit.py
compiler/see_through/: extend_sam.py  torch_utils_shim.py
importer/: png_importer.py  psd_importer.py
importers/: custom_flat_layer_map.json  custom_flat_psd_importer.py  flat_layer_map.json  flat_psd_importer.py  layer_mapper.py  see_through_layer_map.json  see_through_psd_importer.py
js/: calibration.js  cleanup.js  export.js  fit_preview.js  import.js  render.js  state.js  stencils.js  utils.js  wardrobe.js
public/assets/: wardrobe_manifest.json
public/assets/compiled/dress/dress_greendresstest/: metadata.json
public/assets/compiled/dress/dress_greendresstest/fit_debug/: anchors.json  dress_greendresstest_fit_report.json
public/assets/compiled/dress/dress_test/: metadata.json
public/assets/compiled/dress/dress_test/fit_debug/: anchors.json  dress_test_fit_report.json
public/assets/compiled/dress/dress_test_blue_dress/: metadata.json
public/assets/compiled/dress/dress_testdress/: metadata.json
public/assets/compiled/dress/dress_testgrdrs/: metadata.json
python/tests/: test_ai_segmenter.py  test_cleanup_assist.py  test_compiler.py  test_coreml_bridge.py  test_estimators.py  test_fit_pipeline.py  test_guide_templates.py  test_layerdiffuse_bridge.py  test_reference_pack.py  test_rig_autodetect.py
render/: compositor.py
scratch/: find_anchors.py
scripts/coreml/: README.md
scripts/draw_things_inputs/: SETTINGS.md
scripts/inpaint/: run_inpaint.py  worker.py
scripts/layerdiffuse/: run_layerdiffuse.py
tests/: bake.test.js  cleanup.test.js  project.test.js  tailor.test.js  test_pattern_constructor.py  test_style_schema.py
(+6 files in other folders)
