[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "paperdoll-studio"
version = "1.0.0"
description = "Paper Doll Studio — local-first character customization pipeline for visual novel and game creators"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/alikh/paperdoll"
Repository = "https://github.com/alikh/paperdoll.git"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "psd-tools>=1.0.0",
    "rembg[cpu]>=2.0.0",
    "jsonschema>=4.20.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.9.0",
    "mediapipe>=0.10.0",
]

[project.optional-dependencies]
inpaint = [
    "torch>=2.1.0",
    "diffusers>=0.26.0",
]
tagger = [
    "torch>=2.1.0",
    "timm>=0.9.0",
    "pandas>=2.0.0",
    "huggingface-hub>=0.20.0",
]
sam = [
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "huggingface-hub>=0.20.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
